# Aquila-next

./: README.md
aquila-api/: Cargo.toml
aquila-api/src/: config.rs  index.html  main.rs  routes.rs  utils.rs
aquila-api/src/analysis/: cell_interaction.rs  corr.rs  custom_type.rs  distribution_index.rs  entropy.rs  geo_ops.rs  mod.rs  neighbors_search.rs  spatial_autocorr.rs  stats.rs
aquila-api/src/db/: cell_info.rs  data_records.rs  mod.rs  roi_info.rs
aquila-fastapi/: Dockerfile  README.md  config.py  main.py  requirements.txt  setup.cfg  tests.py
aquila-fastapi/aquila_spatial/: __init__.py  ripley.py  spatial_community.py
aquila-fastapi/aquila_spatial/spatialde/: __init__.py  gaussian_process.py
aquila-fastapi/tests/: test_de.py
aquila-preprocess/: .gitignore  README.md  meta.json.template  pyproject.toml  requirements.txt  search_data.ipynb  setup.cfg  test.ipynb
aquila-preprocess/aquila/: __init__.py  db.py  guards.py  io.py  preprocess.py  query.py  reader.py  scheme.py  watcher.py
aquila-preprocess/tests/: test_scheme.py
aquila-sv/: Dockerfile  main.py  requirements.txt  tests.py
aquila-sv/svgene/: __init__.py  sepal.py  somde.py  spatialde.py
aquila-sv/svgene/spatialde/: de_test.py
aquila-sv/tests/: test_de.py
aquila-ui/: .env.development  .env.production  .gitignore  jsconfig.json  next.config.js  package.json
aquila-ui/components/: ClientOnly.js  ContentBox.js  CustomHooks.js  Footer.js  Header.js  HelperTips.js  HideOnScroll.js  Link.js  NavBar.js  NumberInput.js  OneItemCenter.js  ParamWrap.js  SectionIntro.js  Selector.js  SideDrawer.js  TabPanel.js  VirtualizedAutoComplete.js  humanize.js  stores.js
aquila-ui/components/DataTable/: AnalysisRecordTable.js  Cards.js  DataRecordList.js  FilterList.js  ROISelector.js  RecordDetailsTable.js  RecordsTable.js  SearchRecords.js  SortButton.js  utils.js
aquila-ui/components/InfoDisplay/: Chips.js  StatsCard.js
aquila-ui/components/InputComponents/: ColorMapSelect.js  HelperTips.js  NumberInput.js  ParamWrap.js  Ranger.js  SectionExplainer.js  SectionTitleWrap.js  Selector.js  SubmitButton.js  VirtualizedAutoComplete.js
aquila-ui/components/Intro/: FeaturesIntro.js  RecordsPanel.js  SectionIntro.js  StatsIntro.js
aquila-ui/components/Layout/: ClientOnly.js  ContentBox.js  LeftPanel.js  OneItemCenter.js  TabPanel.js
aquila-ui/components/Viz/: BarChart.js  BoxPlot.js  (+23 more)
aquila-ui/data/: get.js  post.js
aquila-ui/db/: createExample.js  db.js  fileprocess.js  preprocess.js  schema.js  uuid.js
aquila-ui/pages/: 404.js  _app.js  _document.js  about.js  index.js  publication.js  tutorial.js
aquila-ui/public/: manifest.json  tutorial.pptx
aquila-ui/scripts/: 1.0 thousand_Cell_Info_File_withT.csv  1.0 thousand_ROI_File.csv  ROI_File.csv  fake_data.py  favicons.js
aquila-ui/styles/: createEmotionCache.js  theme.js
scripts/: deploy.sh
(+68 files in other folders)
