[package]
name = "aquila-api"
version = "0.1.0"
authors = ["Mr-Milk <zym.zym1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.5.0"
actix-cors = "0.5.4"
config = "0.10.1"
serde = "1.0.136"
serde_json = "1.0.79"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres", "macros", "json", "uuid"] }
uuid = { version = "0.8", features = ["serde"] }
dotenv = "0.15.0"
anyhow = "1.0.56"
derive_more = "0.99.17"
log = "0.4"
env_logger = "0.9.0"


rand = "0.8.5"
rayon = "1.5.1"
itertools = "0.10.3"
kiddo = "0.2.3"
delaunator = "1.0.1"
geo = "0.18.0"
counter = "0.5.3"
ordered-float = "2.10.0"
ndarray = { version = "0.15.4", features =['rayon', 'serde'] }
ndarray-stats = "0.5.0"
num-traits = "0.2.14"
statrs = "0.15.0"
nalgebra-sparse = "0.6.0"
