[metadata]
name = svgene
long_description = file: README.md
long_description_content_type = text/markdown
author_email = yb97643@um.edu.mo
license = MIT
classifiers =
      License :: OSI Approved :: MIT
      Programming Language :: Python :: 3
      Intended Audience :: Science/Research
      Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
platforms = any
python_requires = >= 3.7
install_requires =
      numpy
      pandas
      scipy

[options.extras_require]
dev =
      pytest
