[metadata]
name = aquila
version = 0.1.0
description = Utilities collection for preprocessing aquila database data
author_email = yb97643@um.edu.mo

[options]
packages = find:
platforms = any
python_requires = > 3.0
install_requires =
      anndata
      scanpy
      sqlalchemy

[options.entry_points]
console_scripts =
      aqwatch = aquila.watcher:watch